objects/ssot__AccountContact__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AccountContactRoles__c</fullName>
        <label>AccountContactRoles relationship</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AccountId__c</fullName>
        <label>Account</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssistantName__c</fullName>
        <label>Assistant Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssistantPhone__c</fullName>
        <label>Assistant Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BusinessPhoneId__c</fullName>
        <label>Business Phone</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContactEmailId__c</fullName>
        <label>Contact Email</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContactNote__c</fullName>
        <label>Contact Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DeceasedDateTime__c</fullName>
        <label>Deceased Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DepartmentName__c</fullName>
        <label>Department Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalRecordId__c</fullName>
        <label>External Record Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalSourceId__c</fullName>
        <label>External Source Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FaxPhoneId__c</fullName>
        <label>Fax Phone</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FirstName__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Gender__c</fullName>
        <label>Gender</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HomePhoneId__c</fullName>
        <label>Home Phone</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Account Contact Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IndirectRelationAccountContactId__c</fullName>
        <label>Indirect Relation Account Contact</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IndividualId__c</fullName>
        <label>Individual</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastActivityDate__c</fullName>
        <label>Last Activity Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LastName__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MailingAddressId__c</fullName>
        <label>Mailing Address</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MaritalStatus__c</fullName>
        <label>Marital Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MiddleName__c</fullName>
        <label>Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MobilePhoneId__c</fullName>
        <label>Mobile Phone</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OtherContactAddressId__c</fullName>
        <label>Other Contact Address</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PersonName__c</fullName>
        <label>Person Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReportsToAccountContactId__c</fullName>
        <label>Reports To Account Contact</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SequenceInMultipleBirthNumber__c</fullName>
        <label>Sequence In Multiple Birth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761149145_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AccountContact_AccountId_map_Account_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>AccountContact_AccountId_map_Account_rel</relationshipLabel>
        <relationshipName>rel_1697761149145_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761149229_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AccountContact_BusinessPhoneId_map_C_rel</label>
        <referenceTo>ssot__ContactPointPhone__dlm</referenceTo>
        <relationshipLabel>AccountContact_BusinessPhoneId_map_C_rel</relationshipLabel>
        <relationshipName>rel_1697761149229_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761149291_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AccountContact_ContactEmailId_map_Co_rel</label>
        <referenceTo>ssot__ContactPointEmail__dlm</referenceTo>
        <relationshipLabel>AccountContact_ContactEmailId_map_Co_rel</relationshipLabel>
        <relationshipName>rel_1697761149291_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>